--- a/Lesson-3.html
+++ b/Lesson-3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Learn CSS</title>
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="https://github.com/Jafar-Frotan/CSS/blob/main/Lesson-3.css">
 </head>
 <body>
     <h1>Zeytoon TUTS+</h1>
