--- a/Lesson-5.html
+++ b/Lesson-5.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Learn CSS</title>
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="https://github.com/Jafar-Frotan/CSS/blob/main/Lesson-5.css">
 </head>
 <body>
     <a href="https://www.ZeytoonICT.com" target="_blank">Zeytoon</a>
