--- a/Lesson-7.html
+++ b/Lesson-7.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Learn CSS</title>
-<link rel="stylesheet" href="Style/style.css">
+<link rel="stylesheet" href="https://github.com/Jafar-Frotan/CSS/blob/main/Lesson-7.css">
 </head>
 <body>
     <!--<p class="margin">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ut mi sed dolor tempor sollicitudin. Quisque pharetra, diam at fringilla pulvinar, mi massa pretium nibh, non euismod erat purus quis leo. Aliquam blandit orci eu neque finibus, nec commodo ante eleifend. Donec dictum massa vitae vestibulum interdum. Sed eros sem, suscipit ut sodales sit amet, sodales maximus dolor. Quisque enim erat, iaculis at imperdiet quis, scelerisque id diam. Sed quis arcu ultricies, lacinia tellus ac, pharetra metus.</p>
