--- a/Lesson-8.html
+++ b/Lesson-8.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Learn CSS</title>
-<link rel="stylesheet" href="Style/style.css">
+<link rel="stylesheet" href="https://github.com/Jafar-Frotan/CSS/blob/main/Lesson-8.css">
 </head>
 <body>
     <!--<div class="box1">
