--- a/Lesson-12.html
+++ b/Lesson-12.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="https://github.com/Jafar-Frotan/CSS/blob/main/Lesson-12.css">
     <title>Shadow</title>
 </head>
 <body>
